add requirements and Makefile (for 2x2080Ti)

--- a/pytorch-container/.devcontainer/devcontainer.json
+++ b/pytorch-container/.devcontainer/devcontainer.json
@@ -1,8 +1,9 @@
 {
-    "name": "pytorch",
-    "dockerComposeFile": ["../docker-compose.yml"],
-    "service": "dev",
-    "workspaceFolder": "/home/yf/workspace",
-    "extensions": ["ms-python.python", "ms-python.vscode-pylance"],
-    "shutdownAction": "none",
-  }
+  "name": "pytorch",
+  "dockerComposeFile": ["../docker-compose.yml"],
+  "service": "dev",
+  "workspaceFolder": "/home/yf/workspace",
+  "extensions": ["ms-python.python","ms-python.vscode-pylance","christian-kohler.path-intellisense",
+  "ms-toolsai.jupyter"],
+  "shutdownAction": "none",
+}
