--- a/pytorch-container/requirements.txt
+++ b/pytorch-container/requirements.txt
@@ -1,9 +1,5 @@
-numpy==1.24.2
-joblib==1.2.0
-matplotlib==3.7.1
-tqdm==4.65.0
-jupyterlab==4.0.2
-ipywidgets==8.0.6
-scikit-learn==1.2.2
-torchnet==0.0.4
-gradio==3.34.0
+matplotlib>=3.7.1
+tqdm>=4.65.0
+jupyterlab>=4.0.2
+ipywidgets>=8.0.6
+gradio>=3.34.0
